# RoboMotionSim

./: .gitignore  CMakeLists.txt  README.md
cmake/: dependencies.cmake  module_helpers.cmake
cmake/dependencies/: asio.cmake  exprtk.cmake  imgui.cmake  imgui_sfml.cmake  nativeFileDialog.cmake  nlohmann_json.cmake  sfml.cmake  zeroMq.cmake
docs/: index.md
docs/bachelorThesis/src/: Anotace-bakalarske-Prace-Venzara.md  specification.md  time-schedule.md
docs/concept/: ClassDiagram.plantuml  MainGui.drawio  RobotConfigDesign.drawio
docs/dev/: architecture.md  building.md  extending.md  ipc-protocol.md  modules.md  physics-engine.md
docs/user/: data-logging.md  getting-started.md  imgui-interface.md  input-methods.md  installation.md  robot-configuration.md  visualization-settings.md
git-hooks/: pre-commit
src/: AppEngine.cpp  RoboMotion.cpp
src/3rdPartyLibs/exprtk/: silent_exprtk.hpp
src/app/: AppEngine.cpp  AppEngine.hpp  RoboMotion.cpp
src/assets/: app.rc  embedAsset.cmake
src/configManager/: CMakeLists.txt
src/configManager/ConfigFiles/: differential_config.ini  mecanum_config.ini  omni_config.ini  outTestConfig.ini
src/configManager/include/: ConfigJsonSerialization.hpp  ConfigManager.hpp  ExportHelper.hpp  ImportHelper.hpp  Utils.hpp
src/configManager/src/: ConfigManager.cpp  ExportHelper.cpp  ImportHelper.cpp  Utils.cpp
src/core/: CMakeLists.txt  MathUtils.hpp  RobotConfig.cpp  RobotConfig.hpp  RobotState.hpp  core.cpp
src/core/include/: AppConfig.hpp  ConfigSection.hpp  MathUtils.hpp  RobotConfig.hpp  RobotStatLogger.hpp  RobotState.hpp
src/core/src/: RobotConfig.cpp  RobotStatLogger.cpp
src/inputManager/: CMakeLists.txt
src/inputManager/include/: IPCInput.hpp  InputManager.hpp  JoystickInput.hpp  KeyboardInput.hpp  SerialInput.hpp
src/inputManager/include/IPC/: CommandManager.hpp  CommandParameters.hpp  Commands.hpp  IPCInput.hpp  Protocol.hpp
src/inputManager/src/: IPCInput.cpp  InputManager.cpp  JoystickInput.cpp  KeyboardInput.cpp  SerialInput.cpp
src/inputManager/src/IPC/: Commands.cpp  IPCInput.cpp
src/libraryIntegration/: CMakeLists.txt  ConfigJsonSerialization.hpp  ConfigManager.cpp  ConfigManager.hpp  DifferentialConfig.ini  ExportHelper.cpp  MecanumConfig.ini  OmniConfig.ini  RoboConfig.hpp  Utils.cpp  Utils.hpp  outTestConfig.ini  testConfig.ini
src/libraryIntegration/ConfigFiles/: app_config.json  embedConfig.cmake
src/libraryIntegration/include/: ConfigJsonSerialization.hpp  ExportHelper.hpp  Utils.hpp
src/libraryIntegration/src/: ConfigManager.cpp  ImportHelper.cpp  Utils.cpp
src/physicsEngine/: CMakeLists.txt  PhysicsEngine.cpp  PhysicsEngine.hpp  PhysicsObjects.hpp
src/physicsEngine/include/: PhysicsEngine.hpp
src/physicsEngine/src/: PhysicsEngine.cpp
src/visualization/: Arrow.cpp  Arrow.hpp  CMakeLists.txt  CompositeShape.cpp  CompositeShape.hpp  PointVector.cpp  PointVector.hpp  RobotShape.cpp  RobotShape.hpp  RobotVisualization.cpp  RobotVisualization.hpp  SFMLHelper.hpp  SettingsWindow.cpp  VisualizationEngine.cpp  VisualizationEngine.hpp  WheelVectors.cpp  WheelVectors.hpp
src/visualization/include/: ColorConstants.hpp  RenderEngine.hpp  SFMLHelper.hpp  VisualizationEngine.hpp
src/visualization/include/rendering/: Grid.hpp  RenderEngine.hpp  RobotTrail.hpp  Text.hpp
src/visualization/include/shapes/: Arrow.hpp  CompositeShape.hpp  CurvedArrow.hpp  PointVector.hpp  RobotShape.hpp  WheelVectors.hpp
src/visualization/include/windows/: InputSettingsWindow.hpp  MainWindow.hpp  RenderSettingsWindow.hpp  RobotDesignerWindow.hpp  RobotStatWindow.hpp  SettingsWindow.hpp  SettingsWindowBase.hpp  Window.hpp  WindowHelper.hpp
src/visualization/src/: RenderEngine.cpp  VisualizationEngine.cpp
src/visualization/src/rendering/: Grid.cpp  RenderEngine.cpp  RobotTrail.cpp  Text.cpp
src/visualization/src/shapes/: Arrow.cpp  CompositeShape.cpp  CurvedArrow.cpp  RobotShape.cpp  WheelVectors.cpp
src/visualization/src/windows/: InputSettingsWindow.cpp  MainWindow.cpp  RenderSettingsWindow.cpp  RobotDesignerWindow.cpp  RobotStatWindow.cpp  SettingsWindow.cpp  SettingsWindowBase.cpp
